tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/string_and_char_mul.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print("Hello" * 'a')

